--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
@@ -25,5 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.9"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
