--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,9 @@
     "nodemon": "^3.1.9"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "16.x"
+  },
   "keywords": [],
   "description": ""
 }
