--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,6 +5,12 @@
         "src": "index.js",
         "use": "@vercel/node"
       }
-    ]
+    ],
+    "functions": {
+      "api/**.js": {
+        "memory": 1024,
+        "maxDuration":120
+      }
+    }
   }
   
