--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,8 +2,19 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "api/**/*.js",
         "use": "@vercel/node"
+      }
+    ],
+    "functions": {
+      "api/**/*.js": {
+        "maxDuration": 180
+      }
+    },
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/api/index.js"
       }
     ]
   }
