--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build": "node index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
+    "build": "node api/index.js"
   },
   "author": "",
   "license": "ISC",
